# craftinginterpreters

./: .clang-format  CMakeLists.txt  README.md
include/: chunk.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
